--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,11 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>y esto es un parrafo random que estoy escribiendo
+                     debido a que no se que poner y freddy puso un texto
+                      bien largo y esto lo escribo rapido y asi no pierdo
+                       tiempo copiando lo de el
+                </p>
             </div>
         </div>
     </body>
